@@ -29,6 +29,8 @@
 typedef uint32_t chopstx_t;
 typedef uint8_t chopstx_prio_t;
 
+extern chopstx_t chopstx_main;
+
 /* NOTE: This signature is different to PTHREAD's one.  */
 chopstx_t
 chopstx_create (uint32_t flags_and_prio,
